--- a/src/app/admin-section/dashboard/dashboard.component.html
+++ b/src/app/admin-section/dashboard/dashboard.component.html
@@ -13,14 +13,8 @@
       <i class="fa fa-chart-bar"></i>
       <span class="info">Basic Information</span>
     </div>
-    <div class="dashboard-cards">
-      <div *ngFor="let status of statusSummary" class="dashboard-card" [ngClass]="status.class">
-        <div class="dashboard-card-icon">
-          <i class="fa" [ngClass]="status.icon"></i>
-        </div>
-        <div class="dashboard-card-label">{{ status.label }}</div>
-        <div class="dashboard-card-value">{{ status.count }}</div>
-      </div>
-    </div>
+
+    <app-dashboardchartview></app-dashboardchartview>
+
   </div>
 </div>
