--- a/src/app/admin-section/allbookings/allbookings.component.html
+++ b/src/app/admin-section/allbookings/allbookings.component.html
@@ -13,7 +13,7 @@
     </div>
 </div>
 
-  <div *ngIf="searchTerm.trim()" class="searched-name" style="margin: 0.5rem 0; font-style: italic; color: #555;">
+  <div *ngIf="searchTerm.trim()" class="searched-name" style="margin: 0.5rem 0; font-style: italic; color: #ffffff;">
     Searched: {{ searchTerm }}
   </div>
 
