--- a/src/app/admin-section/allbookings/allbookings.component.scss
+++ b/src/app/admin-section/allbookings/allbookings.component.scss
@@ -4,6 +4,7 @@
   select {
     color: #111 !important;
     background: #fff !important;
+    
   }
 }
 .room-view-header {
@@ -16,7 +17,7 @@
 .room-view-header select{
   padding: 0.5rem 1rem;
   border-radius: 6px;
-  border: 1px solid #ccc;
+  border: 1px solid #050000;
   font-size: 1rem;
 }
 .tables {
