--- a/src/app/admin-section/customers/customers.component.scss
+++ b/src/app/admin-section/customers/customers.component.scss
@@ -1,7 +1,16 @@
 :host {
   display: block;
-  padding: 2rem;
+  padding: 0.5rem;
   font-family: Arial, sans-serif;
+  background: linear-gradient(135deg, #171725, #4b3912);
+  color: #010713; 
+  border-radius: 12px;
+  font-family: Arial, Helvetica, sans-serif;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    padding-inline: 1.5rem;
+    padding-block: 0.75rem;
+    border-radius: 0.25rem;
+    transition: all 0.2s ease;
 }
 
 .tables {
@@ -11,11 +20,13 @@
   overflow: hidden;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
   color: var(--text-color);
+  font-size: 1.2rem;
 
   th, td {
     padding: 1rem;
     text-align: left;
     border-bottom: 1px solid #ddd;
+    font-size: 1.2rem;
   }
 
   th {
@@ -28,6 +39,15 @@
     cursor: pointer;
     font-size: 1.2rem;
   }
+}
+.room-view-header .select {
+  width: 200px;
+  padding: 0.5rem;
+  border-radius: 6px;
+  border: 1px solid #ddd;
+  background-color: #f9f9f9;
+  font-size: 1.2rem;
+  color: #333;
 }
 
 .popup-backdrop {
@@ -50,11 +70,13 @@
   width: 100%;
   box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2);
   position: relative;
-  border: 2px solid #ddd;
+  border: 2px solid #ffffff;
+  color: #182133;
+  font-size: 1.4rem;
 }
 
 .popup h3 {
-  background: linear-gradient(90deg, #4f46e5, #3b82f6);
+  background: linear-gradient(90deg,#171725, #4b3912);
   color: #fff;
   padding: 1rem 1.5rem;
   border-radius: 8px;
@@ -62,7 +84,7 @@
 }
 
 .popup p {
-  margin: 0.5rem 0;
+  margin: 0.7rem 0;
   color: #ffffff;
 }
 
