--- a/src/app/admin-section/rooms/classic/first-floor.component.scss
+++ b/src/app/admin-section/rooms/classic/first-floor.component.scss
@@ -6,7 +6,8 @@
         border: 1px solid var(--card-border);
         border-radius: 10px; /* Rounded corners for the table */
         overflow: hidden;
-        color: var(--text-color);
+        color: #2c3e50;
+
 }
 .tables th,
 .tables td {
