--- a/src/app/admin-section/rooms/prestige/third-floor.component.scss
+++ b/src/app/admin-section/rooms/prestige/third-floor.component.scss
@@ -3,10 +3,11 @@
         border-spacing: 0; /* Remove spacing between cells */
         width: 100%;
         text-align: left;
-        border: 1px solid #ddd;
+        border: 1px solid var(--card-border);
         border-radius: 10px; /* Rounded corners for the table */
         overflow: hidden;
-        color: var(--text-color);
+        color: #2c3e50;
+
 }
 .tables th,
 .tables td {
