--- a/src/app/admin-section/allbookings/allbookings.component.scss
+++ b/src/app/admin-section/allbookings/allbookings.component.scss
@@ -2,9 +2,8 @@
   input,
   textarea,
   select {
-    color: #111 !important;
-    background: #fff !important;
-    
+    color: #ffffff !important;
+    background: #0b0b31 !important;
   }
 }
 .room-view-header {
@@ -17,7 +16,7 @@
 .room-view-header select{
   padding: 0.5rem 1rem;
   border-radius: 6px;
-  border: 1px solid #050000;
+  border: 1px solid #ccc;
   font-size: 1rem;
 }
 .tables {
@@ -49,8 +48,8 @@
   input,
   textarea,
   select {
-    color: #111 !important;
-    background: #fff !important;
+    color: #ffffff !important;
+    background: #0b0b31 !important;
   }
 }
 
