--- a/src/app/superadmin-sect/superhome.component.html
+++ b/src/app/superadmin-sect/superhome.component.html
@@ -25,6 +25,7 @@
         <li routerLink="pending-accounts" routerLinkActive="active"><span>Pending Accounts</span></li>
         <li routerLink="add-account" routerLinkActive="active"><span>Add Account</span></li>
       </ul>
+      <li routerLink="pricing" routerLinkActive="active" class="fa fa-dollar-sign"><span>Pricing</span></li>
       <li routerLink="settings" routerLinkActive="active" class="fa fa-cogs"><span>Settings</span></li>
       <li routerLink="archives" routerLinkActive="active" class="fa fa-archive"><span>Archives</span></li>
     </ul>
