--- a/src/app/admin-section/booking/booking.component.html
+++ b/src/app/admin-section/booking/booking.component.html
@@ -9,6 +9,10 @@
 <!-- Content will show after loading -->
 <div *ngIf="!isLoading" class="booking-container">
   <div class="room-view-header">
+    <select>
+      <option>Room View</option>
+      <option>List View</option>
+    </select>
   </div>
 
   <table class="tables">
