--- a/src/app/admin-section/booking/booking.component.scss
+++ b/src/app/admin-section/booking/booking.component.scss
@@ -27,8 +27,8 @@
   input,
   textarea,
   select {
-    color: #111 !important;
-    background: #fff !important;
+    color: #ffffff !important;
+    background: #0b0b31 !important;
   }
 }
 
@@ -67,14 +67,7 @@
 input,
 select {
   padding: 0.5rem;
-  border: 1px solid #f5f5f5;
-  box-shadow: var(--shadow-medium);
-  position: relative;
-    padding-inline: 1.5rem;
-    padding-block: 0.75rem;
-    border-radius: 0.25rem;
-    transition: all 0.2s ease;
-    color: var(--text-color);
+  border: 1px solid #ccc;
 }
 
 .popup-actions {
@@ -207,5 +200,4 @@ p{
   justify-content: space-between;
   align-items: center;
   margin-bottom: 1rem;
-  
 }
