--- a/src/app/admin-section/dashboard/dashboard.component.scss
+++ b/src/app/admin-section/dashboard/dashboard.component.scss
@@ -2,16 +2,24 @@
   margin: 2rem 0;
   color: --text-color;
 }
-
+.dashboard-container{
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 1.5rem;
+  border-radius: 16px;
+  box-shadow: 0 2px 16px rgba(0,0,0,0.04);
+}
 
 .dashboard-title {
-  display: flex;
-  align-items: center;
   font-weight: bold;
   font-size: 1.2rem;
   margin-bottom: 1rem;
   gap: 0.5rem;
   color: var(--text-color);
+  h1{
+    font-size: 2.5rem;
+    margin-bottom: 1rem;
+  }
 }
 
 .dashboard-cards {
