--- a/src/app/admin-section/rooms/luxury/fourth-floor.component.scss
+++ b/src/app/admin-section/rooms/luxury/fourth-floor.component.scss
@@ -3,11 +3,10 @@
         border-spacing: 0; /* Remove spacing between cells */
         width: 100%;
         text-align: left;
-        border: 1px solid var(--card-border);
+        border: 1px solid #ddd;
         border-radius: 10px; /* Rounded corners for the table */
         overflow: hidden;
-        color: #2c3e50;
-
+        color: var(--text-color);
 }
 .tables th,
 .tables td {
