--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,6 +14,11 @@
       <a href="#contact">Contact</a>
       <a routerLink="/reserve" class="btn book-now-btn">Book Now</a>
     </nav>
+    <button class="mobile-menu-toggle" (click)="toggleMobileMenu()">
+      <span></span>
+      <span></span>
+      <span></span>
+    </button>
     <a routerLink="/login" class="btn login-btn">Login</a>
   </div>
 </section>
@@ -22,7 +27,7 @@
 <!-- header section ends -->
 
 <!-- home section starts  -->
-
+<section class="back">
 <section class="home" id="home">
 
    <div class="swiper home-slider">
@@ -335,4 +340,5 @@
 
    </div>
 
+</section>
 </section>
